# flow

./: .coveragerc  .flow-commit-msg  .flow.json  .gitignore  .gitmodules  .pymarkdown.yml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE-NOTES.md  config.json  coverage-quest-prompt.md  design.md  flow-phases.json  initech.yaml  pressure-points.md  pytest.ini  requirements.txt  ror-phases.json  ruff.toml  sdlc-phases.json  test_coverage.md  tests-to-fix-continued.md  tests-to-fix.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.config/: nextest.toml
agents/: adversarial.md  ci-fixer.md  cto.md  documentation.md  issue-triage.md  issue-worker.md  learn-analyst.md  onboarding.md  plan-reviewer.md  pm.md  pre-mortem.md  reviewer.md  tech-lead.md
arch/: CLAUDE.md
docs/: _config.yml  cleanup-process.md  commit-process.md  index.html  index.md  prd.md  reflection-process.md  roadmap.md  spec.md  systemdesign.md
eng1/: CLAUDE.md
eng2/: CLAUDE.md
eng3/: CLAUDE.md
growth/: CLAUDE.md
hooks/: check-phase.py  extract-release-notes.py  hooks.json  session-start.sh  start-setup.py
lib/: add-issue.py  add-notification.py  analyze-issues.py  append-note.py  auto-close-parent.py  bump-version.py  check-freshness.py  check-phase.py  ci.py  cleanup.py  clear-blocked.py  close-issue.py  close-issues.py  complete-merge.py  complete-post-merge.py  complete-preflight.py  continue-context.py  create-dependencies.py  create-milestone.py  create-sub-issue.py  detect-framework.py  (+51 more)
(+675 files in other folders)
