[package]
name = "flow-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "flow_rs"
path = "src/lib.rs"

[[bin]]
name = "flow-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
